finsh user implimetation
